<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_search_white_48dp"
            android:title="@string/buscar_musica" />
        <item
            android:id="@+id/nav_cancion"
            android:icon="@drawable/ic_queue_music_white_48dp"
            android:title="@string/canciones_favoritas" />
        <item
            android:id="@+id/nav_artista"
            android:icon="@drawable/ic_recent_actors_white_48dp"
            android:title="@string/artistas_favoritos" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_album_white_48dp"
            android:title="@string/albumes_favoritos" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
